feat(login):解决desktop无法使用验证码登录的问题
- 在Desktop启动时添加生命流程来初始化和销毁
- 在启动desktop app时自动下载KCFE并初始化 使用新窗口
- 优化打开极验流程和稳定性